# MiniLang

./: .gitignore  CMakeLists.txt  README.md
examples/: counter.mc  fibonacci.mc  hello.mc  sorting.mc
include/: ast.h  bytecode.h  codegen.h  lexer.h  optimizer.h  parser.h  symbol_table.h  token.h  vm.h
src/: ast.cpp  codegen.cpp  lexer.cpp  main.cpp  optimizer.cpp  parser.cpp  symbol_table.cpp  vm.cpp  vm_main.cpp
tests/: test_codegen.cpp  test_e2e.cpp  test_lexer.cpp  test_parser.cpp  test_vm.cpp
